# commonplace

./: .gitattributes  .gitignore  BUILD_STORY.md  HANDOFF.md  LICENSE  OPEN_ITEMS.md  README.md  THIRD-PARTY-LICENSES.md  V1_PLAN.md
app/: README.md  package-lock.json  package.json
app/scripts/: fetch-engine.ps1
app/src/: index.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: engine.rs  index.rs  lib.rs
app/src-tauri/tests/: lancedb_smoke.rs
app/vendor-src/: build.mjs  cm-entry.mjs  fg-entry.mjs
files/: README.md  index.html
sample-vault/: existentialism.md  journaling.md  stoicism.md
sample-vault/ai/: local-models.md  project-ideas.md  prompt-examples.md  prompt-patterns.md
sample-vault/english-101/: lec-01-what-is-an-essay.md  lec-02-thesis-and-evidence.md  lec-03-revision.md
sample-vault/inbox/: 2026-06-16-210417.md
sample-vault/meetings/: 2026-05-11-standup.md  2026-05-18-q3-roadmap.md  2026-05-26-vendor-sync.md
sample-vault/notes/: tools.md
sample-vault/reading/: old-man-and-the-sea-1.md  old-man-and-the-sea-2.md  old-man-and-the-sea-3.md
v1_notes/: new 1.txt
